# spinarak

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  Taskfile.yml
.github/workflows/: spinarak-lint.yml
cmake/: build-type.cmake  conan.cmake  init-gtest.cmake  init-spinarak.cmake  macos-hotfix.cmake
src/: main.cc
src/cli/: cli.cc
src/cpu/: cpu.cc  instructions.cc  ld.cc  no_op.cc
src/example/: hello_world.cc
src/include/: globals.hpp  types.hpp
src/include/cli/: cli.hpp
src/include/cpu/: cpu.hpp  decoder.hpp  register.hpp
src/include/cpu/instructions/: ld.hpp  no_op.hpp  not_implemented.hpp
src/include/emulator/: emulator.hpp
src/include/example/: hello_world.h
src/include/memory/: memory.hpp
src/memory/: memory.cc
tests/: test_hello_world.cc  test_memory.cc
tests/example/: test_example.cc
tests/instructions/: test_ld.cc  test_no_op.cc
